--- a/caffespoon.html
+++ b/caffespoon.html
@@ -293,7 +293,7 @@
                 </div>
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="images/FO2.jpg" alt="">
+                        <img src="images/w1.jpg" alt="">
                         <div class="image_overlay">
                             <a href="">More Details</a>
                             <h2>阿加西招牌牛肉拌饭</h2>
