--- a/caffespoon.html
+++ b/caffespoon.html
@@ -269,35 +269,35 @@
 	    </section>    
     </div>
     <section class="work_area" id="WORK">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <div class="work_title  wow fadeInUp animated">
-                        <h1>照片墙</h1>
-                        <img src="images/shape.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="images/EN4.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-md-4 no_padding">
-                    <div class="single_image">
-                        <img src="images/EN1.jpg" alt="">                       
-                    </div>
-                </div>
-                <div class="col-md-4 no_padding">
-                    <div class="single_image">
                         <img src="images/w1.jpg" alt="">
                         <div class="image_overlay">
-                            <a href="">More Details</a>
-                            <h2>阿加西招牌牛肉拌饭</h2>
-                            <h4>¥ 30</h4>
+                            <a href="">View Full Project</a>
+                            <h2>drawing</h2>
+                            <h4>with pencil colors</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 no_padding">
+                    <div class="single_image">
+                        <img src="images/w2.jpg" alt="">
+                        <div class="image_overlay">
+                            <a href="">View Full Project</a>
+                            <h2>drawing</h2>
+                            <h4>with pencil colors</h4>
+                        </div>                        
+                    </div>
+                </div>
+                <div class="col-md-4 no_padding">
+                    <div class="single_image">
+                        <img src="images/w3.jpg" alt="">
+                        <div class="image_overlay">
+                            <a href="">View Full Project</a>
+                            <h2>drawing</h2>
+                            <h4>with pencil colors</h4>
                         </div>                        
                     </div>
                 </div>
@@ -305,17 +305,17 @@
             <div class="row pad_top">
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="images/FO3.jpg" alt="">
+                        <img src="images/w4.jpg" alt="">
                         <div class="image_overlay">
-                            <a href="">More Details</a>
-                            <h2>甜辣酱炒年糕</h2>
-                            <h4>¥ 35</h4>
+                            <a href="">View Full Project</a>
+                            <h2>drawing</h2>
+                            <h4>with pencil colors</h4>
                         </div>                        
                     </div>
                 </div>
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="images/FO5.jpg" alt="">
+                        <img src="images/w5.jpg" alt="">
                         <div class="image_overlay">
                             <a href="">View Full Project</a>
                             <h2>drawing</h2>
@@ -325,8 +325,12 @@
                 </div>
                 <div class="col-md-4 no_padding">
                     <div class="single_image last_padding">
-                        <img src="images/MENU.jpg" alt="">
-                                             
+                        <img src="images/w6.jpg" alt="">
+                        <div class="image_overlay">
+                            <a href="">View Full Project</a>
+                            <h2>drawing</h2>
+                            <h4>with pencil colors</h4>
+                        </div>                        
                     </div>
                 </div>
             </div>           
