--- a/caffespoon.html
+++ b/caffespoon.html
@@ -273,7 +273,7 @@
             <div class="row">
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="images/w1.jpg" alt="">
+                        <img src="images/FO2.jpg" alt="">
                         <div class="image_overlay">
                             <a href="">View Full Project</a>
                             <h2>drawing</h2>
